# automated-forensic-triage

./: Dockerfile  LICENSE  README.md  pyproject.toml
src/triage/: __init__.py  common.py  config.py  linux.py  reporter.py  windows.py
tests/: test_basico.py
