[project]
name = "triage-forense"
version = "2.0.0"
description = "Herramienta de triage forense digital para Linux y Windows — TFM"
requires-python = ">=3.11"
# El proyecto usa únicamente la stdlib de Python.
# Las dependencias opcionales son para desarrollo y testing.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",   # cobertura de tests
]

[project.scripts]
triage-linux   = "triage.linux:main"
triage-windows = "triage.windows:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/triage"]

[tool.uv]
python = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
verbosity = 2

[tool.coverage.run]
source = ["src/triage"]
omit = ["tests/*"]
